<?xml version="1.0"?>
<package>
  <name>fake_gravity_imu</name>
  <version>0.0.0</version>
  <description>The fake_gravity_imu package</description>
  <maintainer email="asynodin@mech.upatras.gr">Aris Synodinos</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <export>
  </export>
</package>
